# otus_rl_hw_01

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh
.devcontainer/: devcontainer.json
project/: pyproject.toml  taxi_qlearning.py  taxi_visualize.py
project/results/: q_table.npy
