[project]
name = "otus-rl-hw-01"
version = "0.1.0"
description = "OTUS Reinforcement Learning – Homework 01"
requires-python = ">=3.11"
dependencies = [
    "gymnasium[classic-control,toy-text]>=1.0",
    "numpy",
    "matplotlib",
    "tqdm",
    "torch",
    "pillow",
]

[tool.uv]
python-preference = "managed"
